move plus button from `remove completed`

--- a/src/app/views/partials/checkboxes.html
+++ b/src/app/views/partials/checkboxes.html
@@ -10,13 +10,15 @@
     </md-checkbox>
 
     <form ng-submit="vm.addTodo($event)">
-        <md-input-container>
-            <label>Write some todo task here...</label>
-            <input ng-model="vm.todoText">
-        </md-input-container>
-        <md-button class="md-fab md-warn" aria-label="Eat cake">
-            <i class="material-icons">add</i>
-        </md-button>
+        <div layout="row" flex>
+            <md-input-container flex>
+                <label>Write some todo task here...</label>
+                <input ng-model="vm.todoText">
+            </md-input-container>
+            <md-button class="md-fab md-wayrn md-mini">
+                <i class="material-icons">add</i>
+            </md-button>
+        </div>
         <md-button class="md-primary" ng-click="vm.archive($event)">
             Remove completed
         </md-button>
