change user menu position

--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -51,12 +51,12 @@
     <md-toolbar layout="row">
         <md-toolbar flex="80" class="md-warn" layout="row" layout-align="center center">
             <img class="img-circle" ng-src="assets/images/feynman.jpg">
-            <md-menu>
+            <md-menu md-offset="0 20">
                 <md-button class="capitalize" ng-click="$mdOpenMenu()" aria-label="Open menu">
                     <span>Richard Feynman</span>
                     <i class="material-icons">keyboard_arrow_down</i>
                 </md-button>
-                <md-menu-content>
+                <md-menu-content width="3">
                     <md-menu-item><md-button ng-click="$mdCloseMenu()" ui-sref="home.profile">Profile</md-button></md-menu-item>
                     <md-menu-item><md-button ng-click="$mdCloseMenu()" ui-sref="home.dashboard">Log out</md-button></md-menu-item>
                 </md-menu-content>
