--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -17,8 +17,8 @@
           </div>
       </md-button>
       <md-divider ng-repeat-end></md-divider>
-      <md-button hide-gt-md flex ng-click="vm.showActions($event)">
-          <div layout="row" class="md-tile-content">
+      <md-button ng-click="vm.showActions($event)" layout-align="center center">
+          <div class="md-tile-content">
             Actions
           </div>
       </md-button>
@@ -48,8 +48,8 @@
 
 <md-sidenav md-component-id="right"
             class="md-whiteframe-z2 md-sidenav-right">
-    <md-toolbar layout="row">
-        <md-toolbar flex="80" class="md-warn" layout="row" layout-align="center center">
+    <md-toolbar>
+        <md-toolbar class="md-warn" layout="row" layout-align="center center">
             <img class="img-circle" ng-src="assets/images/feynman.jpg">
             <md-menu md-offset="0 20">
                 <md-button class="capitalize" ng-click="$mdOpenMenu()" aria-label="Open menu">
@@ -61,11 +61,6 @@
                     <md-menu-item><md-button ng-click="$mdCloseMenu()" ui-sref="home.dashboard">Log out</md-button></md-menu-item>
                 </md-menu-content>
             </md-menu>
-        </md-toolbar>
-        <md-toolbar flex="20" layout="row" layout-align="center center">
-            <md-button ng-click="vm.showActions($event)" class="toolbar-button">
-                <i class="material-icons">more_vert</i>
-            </md-button>
         </md-toolbar>
     </md-toolbar>
 
