--- a/src/app/views/partials/checkboxes.html
+++ b/src/app/views/partials/checkboxes.html
@@ -9,11 +9,11 @@
         {{todo.text}}
     </md-checkbox>
 
-    <form ng-submit="vm.addTodo($event)">
+    <form ng-submit="vm.addTodo($event)" novalidate name="tasksForm">
         <div layout="row" flex>
-            <md-input-container flex>
+            <md-input-container flex ng-class="{'md-input-invalid':tasksForm.taskText.$error.required && tasksForm.$submitted}">
                 <label>Write some todo task here...</label>
-                <input ng-model="vm.todoText">
+                <input ng-model="vm.todoText" name="taskText" required>
             </md-input-container>
             <md-button class="md-fab md-wayrn md-mini">
                 <i class="material-icons">add</i>
