--- a/src/app/views/partials/memory.html
+++ b/src/app/views/partials/memory.html
@@ -1,3 +1,3 @@
-<md-content ng-controller="MemoryController as vm" class="md-padding" layout="row" layout-align="center center">
+<md-content ng-controller="MemoryController as vm" layout="row" layout-align="center center">
     <nvd3 options="vm.chartOptions" data="vm.memoryChartData"></nvd3>
 </md-content>
