--- a/src/app/views/partials/visitors.html
+++ b/src/app/views/partials/visitors.html
@@ -1,3 +1,3 @@
-<md-content ng-controller="VisitorsController as vm" class="md-padding" layout="row" layout-align="center center">
+<md-content ng-controller="VisitorsController as vm" layout="row" layout-align="center center">
     <nvd3 options="vm.chartOptions" data="vm.visitorsChartData"></nvd3>
 </md-content>
