--- a/src/app/views/partials/warnings.html
+++ b/src/app/views/partials/warnings.html
@@ -1,3 +1,3 @@
-<md-content ng-controller="WarningsController as vm" class="md-padding" layout="row" layout-align="center center">
+<md-content ng-controller="WarningsController as vm" layout="row" layout-align="center center">
     <nvd3 options="vm.chartOptions" data="vm.warningsChartData"></nvd3>
 </md-content>
